# HackBulgaria-Programming101

week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/: haskell-platform.cabal  version-2014.2.0.0
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/doc/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+7 more)
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/etc/registrations/: GLURaw-1.4.0.1  GLUT-2.5.1.1  HTTP-4000.2.10  HUnit-1.2.5.2  OpenGL-2.9.2.0  OpenGLRaw-1.5.0.0  QuickCheck-2.6  async-2.0.1.5  attoparsec-0.10.4.0  case-insensitive-1.1.0.3  fgl-5.5.0.1  hashable-1.2.2.0  haskell-src-1.0.1.6  hscolour-1.20.3  html-1.0.1.2  mtl-2.1.3.1  network-2.4.2.3  parallel-3.2.0.4  parsec-3.1.5  primitive-0.5.2.1  random-1.0.1.1  regex-base-0.93.2  regex-compat-0.95.1  regex-posix-0.95.2  split-0.2.2  stm-2.4.2  syb-0.4.1  text-1.1.0.0  unordered-containers-0.2.4.0  vector-0.10.9.1  xhtml-3000.2.1  zlib-0.5.4.1
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/HTTP-4000.2.10/: Paths_HTTP.dyn_hi  Paths_HTTP.hi  Paths_HTTP.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/HTTP-4000.2.10/Network/: Browser.dyn_hi  Browser.hi  Browser.p_hi  BufferType.dyn_hi  BufferType.hi  BufferType.p_hi  HTTP.dyn_hi  HTTP.hi  HTTP.p_hi  Stream.dyn_hi  Stream.hi  Stream.p_hi  StreamDebugger.dyn_hi  StreamDebugger.hi  StreamDebugger.p_hi  StreamSocket.dyn_hi  StreamSocket.hi  StreamSocket.p_hi  TCP.dyn_hi  TCP.hi  TCP.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/HUnit-1.2.5.2/Test/: HUnit.dyn_hi  HUnit.hi  HUnit.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/QuickCheck-2.6/Test/: QuickCheck.dyn_hi  QuickCheck.hi  QuickCheck.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/attoparsec-0.10.4.0/Data/: Attoparsec.dyn_hi  Attoparsec.hi  Attoparsec.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/case-insensitive-1.1.0.3/Data/: CaseInsensitive.dyn_hi  CaseInsensitive.hi  CaseInsensitive.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/fgl-5.5.0.1/: Paths_fgl.dyn_hi  Paths_fgl.hi  Paths_fgl.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/ghc-7.8.3/: mkGmpDerivedConstants  platformConstants  settings  unlit
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/ghc-7.8.3/Cabal-1.18.1.3/: Paths_Cabal.dyn_hi  Paths_Cabal.hi  Paths_Cabal.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/ghc-7.8.3/base-4.7.0.1/: Foreign.dyn_hi  Foreign.hi  Foreign.p_hi  Numeric.dyn_hi  Numeric.hi  Numeric.p_hi  Prelude.dyn_hi  Prelude.hi  Prelude.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/ghc-7.8.3/ghc-7.8.3/: Annotations.dyn_hi  Annotations.hi  Annotations.p_hi  AsmCodeGen.dyn_hi  AsmCodeGen.hi  AsmCodeGen.p_hi  Avail.dyn_hi  Avail.hi  Avail.p_hi  Bag.dyn_hi  Bag.hi  Bag.p_hi  BasicTypes.dyn_hi  BasicTypes.hi  BasicTypes.p_hi  BinIface.dyn_hi  (+932 more)
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/lib/network-2.4.2.3/: Network.dyn_hi  Network.hi  Network.p_hi
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/share/alex-3.1.3/: AlexTemplate  AlexTemplate-debug  AlexTemplate-ghc  AlexTemplate-ghc-debug  AlexTemplate-ghc-nopred  AlexWrapper-basic  AlexWrapper-basic-bytestring  AlexWrapper-gscan  AlexWrapper-monad  AlexWrapper-monad-bytestring  AlexWrapper-monadUserState  AlexWrapper-monadUserState-bytestring  AlexWrapper-posn  AlexWrapper-posn-bytestring  AlexWrapper-strict-bytestring
week2/1-Polyglot/usr/local/haskell/ghc-7.8.3-x86_64/share/happy-1.19.4/: GLR_Base  GLR_Lib  GLR_Lib-ghc  GLR_Lib-ghc-debug  HappyTemplate  HappyTemplate-arrays  HappyTemplate-arrays-coerce  HappyTemplate-arrays-coerce-debug  HappyTemplate-arrays-debug  HappyTemplate-arrays-ghc  HappyTemplate-arrays-ghc-debug  HappyTemplate-coerce  HappyTemplate-ghc
(+8312 files in other folders)
