name:                haskell-platform
version:             2014.2.0.0
homepage:            http://haskell.org/platform
license:             BSD3
license-file:        LICENSE
author:              libraries@haskell.org
maintainer:          haskell-platform@projects.haskell.org
category:            System
synopsis:            The Haskell Platform
description:
    The Haskell Platform (HP) is the blessed set of libraries and tools on
    which to build further Haskell libraries and applications. It is
    intended to provide a comprehensive, stable, and quality tested base for
    Haskell projects to work from.
    .
    This version specifies the following additional developer tools be
    installed, for a system to be in full compliance:
    .
    * cabal-install
    * alex
    * happy
    * haddock

cabal-version:       >= 1.8
build-type:          Custom
tested-with:         GHC ==7.8.3

flag include-ghc-depends
  description: Include all the GHC provided packages in the dependencies
  default:     False

library
  if flag(include-ghc-depends)
    build-depends:
      ghc ==7.8.3,

      -- Core libraries: provided by every ghc installation
      -- We don't include "non-API" packages here.
      array                          ==0.5.0.0,
      base                           ==4.7.0.1,
      bytestring                     ==0.10.4.0,
      Cabal                          ==1.18.1.3,
      containers                     ==0.5.5.1,
      deepseq                        ==1.3.0.2,
      directory                      ==1.2.1.0,
      filepath                       ==1.3.0.2,
      haskell2010                    ==1.1.2.0,
      haskell98                      ==2.0.0.3,
      hpc                            ==0.6.0.1,
      old-locale                     ==1.0.0.6,
      old-time                       ==1.1.0.2,
      pretty                         ==1.1.1.1,
      process                        ==1.2.0.0,
      template-haskell               ==2.9.0.0,
      time                           ==1.4.2,
      transformers                   ==0.3.0.0,
      unix                           ==2.7.0.1
  if !os(windows)
    build-depends:
      unix                           ==2.7.0.1
  else
    build-depends:

  build-depends:
    -- Libraries in addition to what GHC provides:
    -- Note: newer versions of cgi need monad-catchio.
      async                          ==2.0.1.5,
      attoparsec                     ==0.10.4.0,
      case-insensitive               ==1.1.0.3,
      fgl                            ==5.5.0.1,
      GLUT                           ==2.5.1.1,
      GLURaw                         ==1.4.0.1,
      haskell-src                    ==1.0.1.6,
      hashable                       ==1.2.2.0,
      html                           ==1.0.1.2,
      HTTP                           ==4000.2.10,
      HUnit                          ==1.2.5.2,
      mtl                            ==2.1.3.1,
      network                        ==2.4.2.3,
      OpenGL                         ==2.9.2.0,
      OpenGLRaw                      ==1.5.0.0,
      parallel                       ==3.2.0.4,
      parsec                         ==3.1.5,
      primitive                      ==0.5.2.1,
      QuickCheck                     ==2.6,
      random                         ==1.0.1.1,
      regex-base                     ==0.93.2,
      regex-compat                   ==0.95.1,
      regex-posix                    ==0.95.2,
      split                          ==0.2.2,
      stm                            ==2.4.2,
      syb                            ==0.4.1,
      text                           ==1.1.0.0,
      unordered-containers           ==0.2.4.0,
      vector                         ==0.10.9.1,
      xhtml                          ==3000.2.1,
      zlib                           ==0.5.4.1

    -- Libraries that are needed to support the above,
    -- though are not officially part of the platform
-- FIXME: should have some separate designation?

  -- Depending on programs does not work, they are not registered
  -- We list them to help distro packaging.
  build-tools:
      cabal-install                  ==1.18.0.5,
      alex                           ==3.1.3,
      happy                          ==1.19.4,
      hscolour                       ==1.20.3
